[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dwlab_cmkapi"
version = "0.6.50"
description = "DW-Lab CMK API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Detlef Wolf", email = "detlef.wolf@dw-lab.de" },
]
requires-python = ">=3.8"

dependencies = [
    "requests >=2.0"
]

[project.urls]
Homepage = "https://github.com/dtlfwolf/dwlab-cmkapi"

[tool.setuptools.packages.find]
where = ["src"]
